--- a/START CODE (W10)/EXERCISE 5/css/style.css
+++ b/START CODE (W10)/EXERCISE 5/css/style.css
@@ -1,4 +1,5 @@
 .container {
+    display: flex;
     width: 40%;
     margin: 0 auto;
     margin-top: 80px;
@@ -29,4 +30,16 @@ select {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+}
+.filter-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+.displaySection{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
 }
